<resources>
    <string name="app_name">ECart</string>
    <string name="image">Image</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dont_have_account_register">Don\'t Have Account? Register</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an Account? Login</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="orders">Orders</string>
    <string name="app">Apps</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="list_item_name">List Item Name</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_language">Change Language</string>
    <string name="ln_hindi">हिंदी</string>
    <string name="ln_gujarati">ગુજરાતી</string>
    <string name="ln_english">English</string>
    <string name="label_recommended_products">Recommended Products</string>
    <string name="label_best_sellers">Best Sellers</string>
    <string name="label_featured_products">Featured Products</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Rs. 15000</string>
</resources>