<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_e_cart_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/transparent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_emailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="30dp"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@+id/login_passwordLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:drawableEnd="@drawable/ic_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="30dp"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@+id/tv_forgotPassword"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/forgot_password"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:text="@string/login"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_register" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/dont_have_account_register"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>