<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/img_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_e_cart_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/transparent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="30dp"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@+id/login_passwordLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_registerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerEmailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="30dp"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@+id/login_passwordLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerPhoneLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="30dp"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@+id/login_passwordLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_registerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:hint="@string/phoneNumber"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="30dp"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@+id/login_passwordLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerCnfPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="30dp"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@+id/login_passwordLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_register_cnfPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:text="@string/register"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_register" />

            <TextView
                android:id="@+id/tv_backToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:text="@string/already_have_an_account" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>