<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_120sdp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_5sdp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_category" />

        <ImageView
            android:id="@+id/img_favorite"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_3sdp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_favorite" />

        <TextView
            android:id="@+id/tv_productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_product"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:ellipsize="end"
            android:gravity="start|top"
            android:singleLine="true"
            android:text="@string/product_name"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_productName"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_customItemMRP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/product_price"
                android:textSize="@dimen/_9sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_customItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/product_price"
                android:textSize="@dimen/_9sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>