<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/_5sdp"
    tools:context=".fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_20sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_userProfile"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/user1"
                    app:civ_border_width="0.5dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_toStartOf="@+id/img_editProfile"
                    android:layout_toEndOf="@+id/img_userProfile"
                    android:background="@color/transparent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_profileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_profileEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_editProfile"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_edit" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_profileItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/rounded_backbround"
            android:padding="@dimen/_5sdp"
            tools:itemCount="5"
            tools:listitem="@layout/custom_profile_list" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>